--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "airtable": "^0.11.4",
+    "classnames": "^2.3.1",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0",
+    "unsplash-js": "^7.0.15"
   },
   "devDependencies": {
     "eslint": "8.18.0",
